fixed spacing of top buttons to match on other devices

--- a/front-end/app.css
+++ b/front-end/app.css
@@ -12,7 +12,7 @@ body {
 .inner-header{
   width: 100%;
   height: 100%;
-  display: block;
+
   margin: 0 auto;
   background-color: #ffffffde;
   text-align: center;
@@ -39,8 +39,8 @@ body {
     font-weight: 800;
   }
 .top-buttons {
-margin: 20px;
-top: 20px;
+margin-left: 20px;
+top: 40px;
 }
 .top-buttons:hover {
 background-color: white;
